<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon1"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/car"
            android:title="@string/menu_shoppingCar" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/profile2"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_AddProduct"
            android:icon="@drawable/buy"
            android:title="@string/menu_Add"/>
        <item
            android:id="@+id/nav_Favorites"
            android:icon="@drawable/favorito"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_Exit"
            android:icon="@drawable/exit"
            android:title="@string/menu_exit"/>


    </group>
</menu>