<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateproductFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"
            android:background="@drawable/main"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:text="@string/app_Name"
                android:textAlignment="center"
                android:fontFamily="@font/greconian"
                android:textSize="30sp"
                android:layout_margin="40dp"
                android:textColor="@color/white"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical"
            android:background="@drawable/border">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:layout_margin="10dp"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:text="@string/menu_Add2"
                    android:textColor="@color/naranj"
                    android:textSize="30sp"
                    android:fontFamily="@font/zone"
                    android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="90"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="15">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:orientation="vertical">
                            <TextView
                                android:layout_margin="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="50"
                                android:text="@string/nombreP"
                                android:textColor="@color/naranj"
                                android:textSize="15sp"
                                android:fontFamily="@font/zone"
                                android:textAlignment="center"/>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="50"
                                android:hint="@string/EnterName"
                                android:textColor="@color/naranj"
                                android:textSize="10sp"
                                android:singleLine="true"
                                android:fontFamily="@font/zone"
                                android:textAlignment="center"/>


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:orientation="vertical">
                            <TextView
                                android:layout_margin="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="50"
                                android:text="@string/Cantidad"
                                android:textColor="@color/naranj"
                                android:textSize="15sp"
                                android:fontFamily="@font/zone"
                                android:textAlignment="center"/>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="50"
                                android:inputType="number"
                                android:hint="@string/Entercantidad"
                                android:textColor="@color/naranj"
                                android:textSize="10sp"
                                android:singleLine="true"
                                android:fontFamily="@font/zone"
                                android:textAlignment="center"/>

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="50"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/imagenno"
                                android:scaleType="fitXY" />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:text="@string/camera"
                                android:textSize="10sp"/>


                        </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="50"
                                android:orientation="vertical">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:background="@drawable/border"
                                    android:layout_weight="50"
                                    android:hint="@string/EnterDetails"
                                    android:textColor="@color/naranj"
                                    android:textSize="10sp"
                                    android:fontFamily="@font/zone"
                                    android:textAlignment="center"
                                    android:scrollbars="vertical"
                                    android:padding="10dp"/>
                            </LinearLayout>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10">
                        <TextView
                            android:layout_margin="5dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/precio"
                            android:textColor="@color/naranj"
                            android:textSize="15sp"
                            android:fontFamily="@font/zone"
                            android:textAlignment="center"/>
                        <EditText
                            android:layout_margin="5dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:hint="@string/enterprecio"
                            android:inputType="number"
                            android:textColor="@color/naranj"
                            android:textSize="15sp"
                            android:fontFamily="@font/zone"
                            android:textAlignment="center"/>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="15"
                        android:gravity="center">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:text="@string/add"
                            android:fontFamily="@font/zone"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="20"
                        android:text="@string/list"
                        android:textColor="@color/naranj"
                        android:textSize="30sp"
                        android:fontFamily="@font/zone"
                        android:textAlignment="center"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/lista_H"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="80"
                        android:scrollbars="horizontal"
                        />


                </LinearLayout>




            </LinearLayout>



        </LinearLayout>


    </LinearLayout>


</FrameLayout>