<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="@drawable/main"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:text="@string/app_Name"
                android:textAlignment="center"
                android:fontFamily="@font/greconian"
                android:textSize="45sp"
                android:layout_margin="40dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:text="@string/menu_shop"
                android:textAlignment="center"
                android:fontFamily="@font/greconian"
                android:textSize="15sp"
                android:textColor="@color/Gris"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:hint="@string/filtrar"
                    android:paddingLeft="10dp"

                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:text="@string/Buscar"
                    android:fontFamily="@font/login"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:layout_margin="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>